# OmphalOS

./: Cargo.toml  LICENSE  README.md
driver-display-mipidsi/: Cargo.toml
driver-display-mipidsi/src/: lib.rs  macros.rs
driver-interface/: Cargo.toml
driver-interface/src/: display.rs  lib.rs
kernel/: Cargo.toml  build.rs
kernel-logger/: Cargo.toml
kernel-logger/src/: lib.rs
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  console.rs  main.rs
kernel/src/task/: exec.rs  mod.rs
platform-esp/: Cargo.toml  build.rs
platform-esp/src/: context.rs  lib.rs
platform-esp/src/board/: lilygo_t_deck.rs  lilygo_t_watch_s3.rs  mod.rs
riscv/: Cargo.toml
riscv/src/: bus.rs  cpu.rs  csr.rs  dram.rs  exception.rs  interrupt.rs  lib.rs
riscv/tests/: exception.rs  helper.rs  rv32i.rs
xtask/: Cargo.toml
xtask/src/: build.rs  main.rs  target.rs
