[package]
name = "kernel-logger"
version.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
critical-section.workspace = true
esp-println = { version = "0.11.0", optional = true }

[features]
default = []
platform-esp = ["dep:esp-println"]
cpu-esp32s3 = ["esp-println/esp32s3"]
